<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Middleman</string>
    <string name="hello_world">Hello world!</string>
    <string name="location_label">Location:</string>
    <string name="default_location">Rochester</string>
    <string name="radius_label">Radius: </string>
    <string name="miles_label"> miles</string>
    <string name="Feeds">Feeds</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed">feed</string>
    <string name="action_settings">Settings</string>
    <string name="item_low_price">Low Price:</string>
    <string name="item_avg_price">Average Price on eBay:</string>
    <string name="item_max_price">Max Price:</string>
    <string name="item_offered_price">Offered Price:</string>
    <string name="item_location">Location:</string>
    <string name="item_description">Description:</string>
    <string name="item_name">Item:</string>
    <string name="item_expected_profit">Expected Profit:</string>
    <string name="placeholder_text">$$$ Placeholder $$$</string>
    <string name="remove_this_item">Remove this Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search_button_text">Search for Results</string>
    <string name="location_label_text">Location: </string>
    <string name="item_label_text">Item: </string>
    <string name="cost_upfront_label_text">Cost upfront:</string>
    <string name="extimated_profit_label_text">Estimated profit:</string>
    <string name="route_summary">Route Summary</string>
    <string name="delete_from_cart">delete from cart</string>
    <string name="add_button_to_cart">add to cart</string>


</resources>
