<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:padding="5dp">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:id="@+id/textView2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemNameTextView"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemDescTextView"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location:"
            android:id="@+id/textView5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemLocationTextView"
            android:singleLine="false"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp" />
    </TableRow>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/itemImageViewHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="370dp"
        android:maxHeight="400dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/tableRow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Offered Price:"
            android:id="@+id/textView7"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemOfferedPriceTextView"
            android:singleLine="false"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_avg_price"
            android:id="@+id/textView11"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemAveragePriceTextView"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

    </TableRow>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_expected_profit"
            android:id="@+id/textView15"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:id="@+id/itemExpectedProfitTextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingLeft="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_this_item"
            android:id="@+id/removeThisItemButton"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/addToCartButton"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Listing Page"
            android:id="@+id/viewListingButton"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white" />
    </TableRow>


</LinearLayout>
</ScrollView>