<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="2dp"
    android:background="@color/background"
    android:id="@+id/tableLayout"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_label_text"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemEditText"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="20sp"
            android:paddingRight="5dp"
            android:layout_marginRight="10dp"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label_text"
            android:id="@+id/textView2"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationEditText"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:inputType="text" />
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text"
        android:id="@+id/searchButton"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </TableRow>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/selectedItemsListView"
        android:headerDividersEnabled="false" />

</LinearLayout>